tests/errors/assertion.AssertionFailed.1.res
══╡ Assertion Error ╞═════════════════════════════════════════════════════════════════════════════════════ <script> ══

  Runtime check failed

  Tried:
      [x < 2]

  ┃ File: tests/errors/assertion.AssertionFailed.1.art
  ┃ Line: 4
  ┃ 
  ┃    2 ║  
  ┃    3 ║  ensure -> x = 2
  ┃    4 ║► ensure -> x < 2
  ┃    5 ║  print "done"